style.css
body {
    background-color: rgb(14, 14, 14);
    color: white;
    margin: 0;
    padding: 0;
    overflow-x: hidden;
    /* Center the main page content slightly */
    margin-left: 20px; /* Push content slightly towards the middle */
    margin-right: 20px; /* Ensure symmetry */;
}

.container {
    display: flex;
    flex-wrap: wrap;
    align-items: flex-start;
    margin: 0;
    padding: 0;
    position: absolute;
    top: 5%;
    left: 4%;
    right: 4%;
    justify-content: flex-start;
}

.card {
    margin: 10px;
    cursor: pointer;
    text-align: center;
}

.card img {
    width: 200px;
    height: 300px;
    object-fit: cover;
}

.card p {
    color: white;
}

.skeleton-card {
    margin: 10px;
    width: 200px;
    height: 300px;
    background-color: rgb(50, 50, 50);
}

.sidebar {
    position: absolute;
    left: 0;
    top: 6%;
    width: 10%;
    height: calc(100% - 50px); /* Adjusted height to fit below the top bar */
    background-color: rgb(30, 30, 30);
    overflow-y: auto;
    padding: 10px;
}

.back-button {
    margin-bottom: 20px;
    padding: 10px;
    background-color: rgb(70, 70, 70);
    color: white;
    border: 2px solid rgb(100, 100, 100);
    border-radius: 5px;
    cursor: pointer;
    font-size: 16px;
    transition: background-color 0.3s;
}

.back-button:hover {
    background-color: rgb(100, 100, 100);
}

.video-player {
    position: absolute;
    top: 45%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 70%;
    height: auto;
}

.control-panel {
    position: absolute;
    top: 95%; /* Positioned below the video player */
    left: 50%;
    transform: translate(-50%, -50%);
    width: 70%;
    background-color: rgb(50, 50, 50);
    padding: 10px;
    border-radius: 5px;
    text-align: center;
}

.control-panel button {
    padding: 10px;
    background-color: rgb(70, 70, 70);
    color: white;
    border: 2px solid rgb(100, 100, 100);
    border-radius: 5px;
    cursor: pointer;
    font-size: 16px;
    transition: background-color 0.3s;
}

.control-panel button:hover {
    background-color: rgb(100, 100, 100);
}

.control-panel label {
    font-size: 16px;
    color: white;
    margin-left: 10px;
}

.control-panel input[type="checkbox"] {
    width: 20px;
    height: 20px;
    cursor: pointer;
}

.sidebar div {
    font-size: 18px;
    color: white;
    margin-bottom: 10px;
    padding: 5px;
    border-bottom: 1px solid rgb(50, 50, 50);
}

.top-bar {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 5%;
    background-color: rgb(85, 0, 85);
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 20px;
    font-weight: bold;
    z-index: 1000;
}

